--- a/index.html
+++ b/index.html
@@ -1,113 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tooheys Easter Promotion</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        header {
-            background-color: #f0f0f0;
-            padding: 10px;
-            text-align: center;
-        }
-        header img {
-            max-width: 100%;
-        }
-        h1 {
-            color: #012060;
-            font-size: 50px;
-        }
-        p {
-            color: #012060;
-            font-size: 25px;
-        }
-        .last-paragraph {
-            font-size: 25px;
-        }
-        .top {
-            margin: 50px;
-        }
-        section {
-            background-color: #fff;
-            margin-top: 20px;
-        }
-        .blue-section {
-            background-color: #012060;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-            width: 100%;
-            margin: 0;
-        }
 
-        .blue-section .container {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(5, auto);
-            gap: 20px;
-            padding: 0 20px;
-            margin: 100px;
-        }
-
-        .blue-section .box {
-            text-align: center;
-            /* border: 10px solid white;
-            border-radius: 20px; */
-            /* padding: 5px; */
-            /* margin: 5px; Adjust margin between boxes */
-        }
-        .circle {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #fff; /* Background color of the circle */
-            color: #012060; /* Color of the number */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 24px; /* Adjust font size as needed */
-            font-weight: bold;
-            margin: 0 auto 20px; /* Center circle and adjust spacing */
-            margin-top: 20px;
-        }
-
-        .blue-section .box img {
-            width: 30px;
-            margin-bottom: 10px;
-            /* margin: 100px; */
-        }
-
-        .blue-section .box p {
-            /* font-weight: bold; */
-            color: white;
-            font-size: 15px;
-        }
-        .blue-section .box h1 {
-            /* font-weight: bold; */
-            color: white;
-
-        }
-
-        .material-symbols-outlined {
-            font-size: 100px;
-            margin-top: 10px;
-            padding: 20px;
-        }
-        .read-button {
-            border-radius: 7.5px;
-            padding: 10px 20px;
-            background-color: #BA0C2F;
-            color: #fff;
-            border: none;
-            font-weight: bold;
-            font-size: 20px;
-            margin-top: 25px;
-            margin-bottom: 40px;
             cursor: pointer;
             min-height: 50px;
             min-width: 150px;
@@ -116,10 +7,10 @@
         .enter {
             background-color: #fff;
             color: #012060;
-            padding: 20px 0;
+            /* padding: 20px 0; */
             text-align: center;
             width: 100%;
-            margin: 0;
+            /* margin: 0; */
             display: flex;
             justify-content: center;
             align-items: center; /* Vertically align items */
@@ -128,17 +19,15 @@
         .enter .container {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            padding: 0 20px;
-            margin: 100px;
+            gap: 50px;
+            margin: 10px;
+            vertical-align: text-top;
         }
-
 
         .highlight {
             background-color:#BA0C2F;
-            color: #012060;
+            color: #fff;
         }
-
 
         @media only screen and (max-width: 1000px) {
             /* Styles specific to devices narrower than 600px */
@@ -169,15 +58,15 @@
                     <h1></h1>
                 </div>
                 <div class="box">
-                    <h1>MATCH 2</h1>
+                    <p>MATCH 2</p>
                     <span class="material-symbols-outlined">filter_2</span>
                 </div>
                 <div class="box">
-                    <h1>MATCH 3</h1>
+                    <p>MATCH 3</p>
                     <span class="material-symbols-outlined">filter_3</span>
                 </div>
                 <div class="box">
-                    <h1>MATCH 4</h1>
+                    <p>MATCH 4</p>
                     <span class="material-symbols-outlined">filter_4</span>
                 </div>
                 <div class="box">
