--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </head>
 <body>
     <header>
-        <img src="https://d2xcq4qphg1ge9.cloudfront.net/assets/630585/4027332/original_46714_Tooheys_ILG_EasterPromotion_2024_WEB_DT_Hero_FW_v1_r3.gif" alt="Tooheys Easter Promotion Banner">
+        <img src="https://cdn.roilti.com/public/media/campaigns/GEO0177/lQEBWeU5sjKZJDliqoxFDYamKhvD3vius9Re4n9m.jpg?id=bmw0794bmw0774" alt="Tooheys Easter Promotion Banner">
     </header>
     <section class="top">
         <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars, Find your Unique Code located inside your carton & enter your details.</p>
