--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 </head>
 <body>
     <header>
-        <img src="https://cdn.roilti.com/public/media/campaigns/GEO0177/lQEBWeU5sjKZJDliqoxFDYamKhvD3vius9Re4n9m.jpg?id=bmw0794bmw0774" alt="Tooheys Easter Promotion Banner">
+        <img src="LIONVO0147_Tooheys_Coles_SoO_Roilti_Desktop_Header_1950x350px_FA.jpg" alt="Tooheys Banner">
     </header>
     <section class="top">
         <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars, Find your Unique Code located inside your carton & enter your details.</p>
