--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             margin-top: 20px;
         }
         .blue-section {
-            background-color: #012060;
-            color: #fff;
+            background-color: #fff;
+            color: #BA0C2F;
             padding: 20px 0;
             text-align: center;
             width: 100%;
@@ -72,6 +72,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-color: #012060;
         }
 
         .blue-section .container > div:nth-child(1),
@@ -99,12 +100,13 @@
         .blue-section .box h2 {
             /* font-weight: bold; */
             color: white;
-            font-size: 15px;
+            font-size: 10px;
         }
 
         .material-symbols-outlined {
             font-size: 50px;
             margin-top: 10px;
+            color: #BA0C2F;
             /* padding: 20px; */
         }
 
@@ -171,7 +173,7 @@
         <img src="LIONVO0147_Tooheys_Coles_SoO_Roilti_Desktop_Header_1950x350px_FA.jpg" alt="Tooheys Banner">
     </header>
     <section class="top">
-        <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars, Find your Unique Code located inside your carton & enter your details.</p>
+        <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars.<br>Find your Unique Code located inside your carton & enter your details.</p>
     </section>
     <section>
         <div class="blue-section">
