--- a/index.html
+++ b/index.html
@@ -74,21 +74,6 @@
             align-items: center;
             background-color: #012060;
         }
-
-        .blue-section .container > div:nth-child(1),
-        .blue-section .container > div:nth-child(2),
-        .blue-section .container > div:nth-child(3),
-        .blue-section .container > div:nth-child(4),
-        .blue-section .container > div:nth-child(9),
-        .blue-section .container > div:nth-child(10),
-        .blue-section .container > div:nth-child(11),
-        .blue-section .container > div:nth-child(12),
-        .blue-section .container > div:nth-child(17),
-        .blue-section .container > div:nth-child(18),
-        .blue-section .container > div:nth-child(19),
-        .blue-section .container > div:nth-child(20) {
-            background-color: #000; /* Apply the color to the first four children */
-        }
         
         .blue-section .box img {
             width: 10px;
@@ -106,7 +91,7 @@
         .material-symbols-outlined {
             font-size: 50px;
             margin-top: 10px;
-            color: #BA0C2F;
+            color: #fff;
             /* padding: 20px; */
         }
 
@@ -173,7 +158,8 @@
         <img src="LIONVO0147_Tooheys_Coles_SoO_Roilti_Desktop_Header_1950x350px_FA.jpg" alt="Tooheys Banner">
     </header>
     <section class="top">
-        <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars.<br>Find your Unique Code located inside your carton & enter your details.</p>
+        <p>Purchase any Limited Edition Tooheys carton to share from any Liquorland, First Choice Liquor or Vintage Cellars.<br></p>
+        <p>Find your Unique Code located inside your carton & enter your details.</p>
     </section>
     <section>
         <div class="blue-section">
