--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: Helvetica, sans-serif;
         }
         header {
             background-color: #f0f0f0;
@@ -33,9 +33,6 @@
         }
         p {
             color: #012060;
-            font-size: 25px;
-        }
-        .last-paragraph {
             font-size: 25px;
         }
         .top {
@@ -143,6 +140,14 @@
                 /* font-weight: bold; */
                 color: white;
                 font-size: 30px;
+            }
+            h1 {
+                color: #012060;
+                font-size: 30px;
+            }
+            p {
+                color: #012060;
+                font-size: 15px;
             }
             .material-symbols-outlined {
             font-size: 100px;
