--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         .highlight {
             background-color:#BA0C2F;
             color: #fff;
+            font-size: 15px;
         }
 
         @media only screen and (min-width: 600px) {
@@ -148,6 +149,9 @@
             p {
                 color: #012060;
                 font-size: 15px;
+            }
+            .highlight {
+                font-size: 30px;
             }
             .material-symbols-outlined {
             font-size: 100px;
