--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .blue-section .container {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(2fr, 1fr, 1fr, 1fr);
             grid-template-rows: repeat(5, auto);
             gap: 10px;
             padding: 0 20px;
@@ -157,7 +157,17 @@
             font-size: 100px;
             margin-top: 10px;
             /* padding: 20px; */
-        }
+            }
+            .blue-section .container {
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                grid-template-rows: repeat(5, auto);
+                gap: 10px;
+                padding: 0 20px;
+                margin: 10px;
+                /* align-items: center; Center content vertically */
+                /* justify-items: center; Center content horizontally */
+            }
         }
 
     </style>
