--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .blue-section .container {
             display: grid;
-            grid-template-columns: repeat(2fr, 1fr, 1fr, 1fr);
+            grid-template-columns: 2fr 1fr 1fr 1fr;
             grid-template-rows: repeat(5, auto);
             gap: 10px;
             padding: 0 20px;
